# workstack

./: .PHASE_3A_PROGRESS.md  .PLAN.md  .PLAN_PROGRESS.md  .gitignore  AGENTS.md  AGENTS.md.backup  CLAUDE.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-PROGRESS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_ANALYSIS.md  MIGRATION_PLAN_COMPREHENSIVE.md  Makefile  README.md  README.old.md  SUMMARY.md  TAO.md  TAO_OUTLINE.md  TEST_MIGRATION_PLAN.md  architecture-notes.md  ci-submission-skip-plan.md  claude-4-enrichment-implementation-plan.md  comment_body.md  context-loading-optimization-analysis.md  context-loading-optimization-phase-2-plan.md  create-refresh-statusline-command-plan.md  dot-agent.toml  fix-gh-create-issue-plan.md  fix-remaining-test-failures-plan.md  fix-session-plan-extraction-and-add-integration-tests-plan.md  gt-agents-error-handling-audit.md  gt-branch-submitter-test-plan.md  kit-cli-issue-progress-yaml-plan.md  land-stack-restack-fix-plan.md  land-stack-restack-fix-plan.md.backup  plan.md  pr_body.md  pyproject.toml  refactor_context_usages.py  submission-workflow-implementation-plan.md  (+8 more)
.agent/: ARCHITECTURE.md  FEATURE_INDEX.md
.claude/: .settings.json.swp  settings.json  settings.json.backup
.devcontainer/: devcontainer.json
.erp/: README.md  issue.json  plan.md  progress.md
.plan/: plan.md  progress.md
.submission/: plan.md  progress.md  test-trigger.md
.worker-impl/: README.md  issue.json  plan.md  progress.md
docs/: ai-implementation-workflow.md  github-linked-issues.md  project-setup.md  queue-setup.md
scripts/: ai-implementation-helper.sh  download_dagster_discussions.py  migrate_all.sh  migrate_branch_metadata.py  track-token-usage.sh
slackbot/: README.md  __init__.py  app.py  erk_service.py  handlers.py
(+983 files in other folders)
