[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
erk-dev = { workspace = true }
dot-agent-kit = { workspace = true }
erk-shared = { workspace = true }

[project]
name = "erk"
version = "0.1.28"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dagster Labs", email = "hello@dagsterlabs.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "python-frontmatter>=1.0.0",
    "tomlkit>=0.12.0",
    "dot-agent-kit",
    "erk-shared",
]

[project.scripts]
erk = "erk.cli.cli:main"

[dependency-groups]
dev = [
    "erk-dev",
    "dot-agent-kit",
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.8.0",
    "pyright>=1.1.407",
    "libcst>=1.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erk"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
# exclude = [".claude/skills/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["erk", "erk_dev", "dot_agent_kit"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "packages/erk-dev/src", "packages/dot-agent-kit/src", "packages/dot-agent-kit/tests"]
exclude = [".claude/skills/"]
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "packages/erk-dev/tests", "packages/dot-agent-kit/tests"]

[tool.dot-agent]
dev_mode = true
